WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184977
[Curl] Fix wrong schema checking on
r230973
https://bugs.webkit.org/show_bug.cgi?id=184977
Summary
[Curl] Fix wrong schema checking on r230973
Basuke Suzuki
Reported
2018-04-25 10:14:03 PDT
Bug fix. Condition checking was wrong.
Attachments
FIX
(1.37 KB, patch)
2018-04-25 10:18 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-04-25 10:18:43 PDT
Created
attachment 338750
[details]
FIX
Basuke Suzuki
Comment 2
2018-04-25 10:26:01 PDT
Bug fix of
https://bugs.webkit.org/show_bug.cgi?id=184714
.
WebKit Commit Bot
Comment 3
2018-04-25 11:05:57 PDT
Comment on
attachment 338750
[details]
FIX Clearing flags on attachment: 338750 Committed
r231001
: <
https://trac.webkit.org/changeset/231001
>
WebKit Commit Bot
Comment 4
2018-04-25 11:05:59 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-04-25 11:06:19 PDT
<
rdar://problem/39727306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug