[Curl] Fix wrong schema checking on r230973 https://bugs.webkit.org/show_bug.cgi?id=184977

Did write a wrong condition when making a string.

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2018-04-25
Reviewed by Alex Christensen.

No new tests because test interface is not ready.

* platform/network/curl/CurlProxySettings.cpp:
(WebCore::createProxyUrl):

Canonical link: https://commits.webkit.org/200472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231001 268f45cc-cd09-0410-ab3c-d52691b4dbfc